# docs/swagger.json
@@ -2019,20 +2019,10 @@
                 "duration_minutes"
             ],
             "properties": {
-                "anamnesis": {
-                    "type": "string"
-                },
                 "client_id": {
                     "type": "string"
                 },
                 "comment": {
-                    "type": "string"
-                },
-                "complaint_id": {
-                    "description": "Optional medical fields for initial appointment",
-                    "type": "string"
-                },
-                "custom_complaint": {
                     "type": "string"
                 },
                 "date_time": {
